--- a/PHYS 121 - Lab 5.ipynb
+++ b/PHYS 121 - Lab 5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b7d70b36",
+   "id": "880f2a92",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99461058",
+   "id": "1fa61b15",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67d7c5e",
+   "id": "70f15e47",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40094825",
+   "id": "23a40590",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2b9363a",
+   "id": "c7628831",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "206d4cf0",
+   "id": "4fe3eb1d",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c767cd7",
+   "id": "5de30c58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5887bd6",
+   "id": "3a055419",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24b5e778",
+   "id": "5c5a409d",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85137ba4",
+   "id": "8aa24b0e",
    "metadata": {
     "tags": []
    },
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d8e9062",
+   "id": "16b7e655",
    "metadata": {
     "tags": []
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bfaca8f",
+   "id": "8cfa150c",
    "metadata": {
     "tags": []
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a92aadb",
+   "id": "9cd3bfe8",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d7cf2b",
+   "id": "2bd2c152",
    "metadata": {
     "tags": []
    },
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7728f6d3",
+   "id": "4ccd696d",
    "metadata": {
     "tags": []
    },
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5782ecfe",
+   "id": "c6137a1d",
    "metadata": {
     "tags": []
    },
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a2375d",
+   "id": "e8f12aac",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59923b55",
+   "id": "42ed4202",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa94398",
+   "id": "b1ae18dd",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -330,8 +330,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ccb5223",
+   "id": "4d5a04d3",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce9c09ac",
+   "id": "a52fb975",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -378,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e96294ac",
+   "id": "497e7010",
    "metadata": {
     "tags": []
    },
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5c28097",
+   "id": "99687ad8",
    "metadata": {
     "tags": []
    },
@@ -422,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb6ac593",
+   "id": "98aa0cde",
    "metadata": {
     "tags": []
    },
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c2274d2",
+   "id": "95c6b0a6",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1977c326",
+   "id": "d9f63074",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -488,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4db169f5",
+   "id": "4203fad1",
    "metadata": {
     "tags": []
    },
@@ -500,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aacded91",
+   "id": "ff2d260f",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89dc63d6",
+   "id": "154c39c8",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -529,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f38e99ad",
+   "id": "a3889f57",
    "metadata": {},
    "source": [
     "***\n",
@@ -542,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ced4de9e",
+   "id": "8dae9497",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -595,12 +596,12 @@
     "\\label{eq:ratio} \\tag{3}\n",
     "\\end{align}\n",
     "\n",
-    "Thus, in Fig. 2, each tick along the vertical axes corresponds to a change in resistance by a factor of $1.585$.  Advancing by $N$ tick marks corresponds to a change in resistance by a factor of $(1.585)^N$."
+    "Thus, in Fig. 3, each tick along the vertical axes corresponds to a change in resistance by a factor of $1.585$.  Advancing by $N$ tick marks corresponds to a change in resistance by a factor of $(1.585)^N$."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a463894c",
+   "id": "70da54d4",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "171038b3",
+   "id": "8241950b",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -643,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "643d14b4",
+   "id": "c89f7105",
    "metadata": {
     "tags": []
    },
@@ -655,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36ccf41f",
+   "id": "e43d374c",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -667,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a52c433f",
+   "id": "67bd5fb8",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -715,7 +716,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f0f1e51",
+   "id": "3d5193b6",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -748,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9986fd1",
+   "id": "1ecc099f",
    "metadata": {
     "tags": []
    },
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64eaf621",
+   "id": "555a8623",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -778,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39055af7",
+   "id": "c5e75be6",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -811,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8da140d1",
+   "id": "7690adf5",
    "metadata": {
     "tags": []
    },
@@ -827,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa2bde0b",
+   "id": "180233af",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -846,7 +847,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e309765d",
+   "id": "1ab35a44",
    "metadata": {},
    "source": [
     "***\n",
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c21f92",
+   "id": "9cf95b29",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -999,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe2ef6f1",
+   "id": "936b16bb",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1023,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a24f083",
+   "id": "0d17654d",
    "metadata": {
     "tags": []
    },
@@ -1043,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20b8619b",
+   "id": "75df2d6d",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1055,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3f5fed",
+   "id": "6ca5b7fd",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1079,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e83fafe",
+   "id": "5d446542",
    "metadata": {
     "tags": []
    },
@@ -1095,7 +1096,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99294de",
+   "id": "2c4c99b6",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1130,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10cc060c",
+   "id": "d5ccb0e6",
    "metadata": {
     "tags": []
    },
@@ -1146,7 +1147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64a5a0bd",
+   "id": "6b5cc7b9",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1163,7 +1164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd1d2c79",
+   "id": "fb982e64",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1181,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17a97465",
+   "id": "4ce69d66",
    "metadata": {
     "tags": []
    },
@@ -1196,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df389832",
+   "id": "3e5d0b19",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1208,7 +1209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "090c5b98",
+   "id": "097d3f37",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1233,7 +1234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571fefef",
+   "id": "e866825d",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1251,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebcebdb0",
+   "id": "b4ba2b7b",
    "metadata": {
     "tags": []
    },
@@ -1266,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a28371e5",
+   "id": "98de317a",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1278,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5de6f7b8",
+   "id": "ad27ba9f",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1304,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff49374",
+   "id": "ecbc1fe8",
    "metadata": {
     "tags": []
    },
@@ -1324,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19da1565",
+   "id": "cdb8ae14",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1336,7 +1337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeaed00f",
+   "id": "0d57455a",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1360,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d8e7e58",
+   "id": "1d5ec630",
    "metadata": {
     "tags": []
    },
@@ -1376,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d49342a6",
+   "id": "f087e90a",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1411,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3050a90",
+   "id": "b99d736d",
    "metadata": {
     "tags": []
    },
@@ -1427,7 +1428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ea8e85f",
+   "id": "da5d0c32",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1446,7 +1447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88b699af",
+   "id": "5bac86bc",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1464,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4fcff43",
+   "id": "5585a3f2",
    "metadata": {
     "tags": []
    },
@@ -1479,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e74a65",
+   "id": "451701d7",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1491,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b36a68",
+   "id": "190b5208",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1518,7 +1519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f4b342e",
+   "id": "c32300aa",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1536,7 +1537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6c04f2",
+   "id": "e1d76ba6",
    "metadata": {
     "tags": []
    },
@@ -1551,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79d116d2",
+   "id": "008cc76c",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1563,7 +1564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6820de1",
+   "id": "c94f772d",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1582,7 +1583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3de734f",
+   "id": "217cd64a",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1607,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8c379ab",
+   "id": "e47346f2",
    "metadata": {
     "tags": []
    },
@@ -1623,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47de6f06",
+   "id": "4c4a84a9",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1635,7 +1636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7a99846",
+   "id": "76e8d3c1",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1656,7 +1657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e7ce55b",
+   "id": "018de82e",
    "metadata": {},
    "source": [
     "***\n",
@@ -1669,7 +1670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05a7aca",
+   "id": "67b1a173",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1723,7 +1724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcee803b",
+   "id": "c5c615ae",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1746,7 +1747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13049047",
+   "id": "79c0bdb2",
    "metadata": {},
    "source": [
     "***\n",
@@ -1759,7 +1760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48c72731",
+   "id": "96bfb180",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1783,7 +1784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ffacd9",
+   "id": "884d1fba",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1807,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a214d15",
+   "id": "61ec6866",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1820,7 +1821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9657f0f5",
+   "id": "1f3456a8",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1835,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b13ef86",
+   "id": "b034b430",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1848,7 +1849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74352c92",
+   "id": "e2195e0e",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1867,7 +1868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7ec128b",
+   "id": "058a002d",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1886,7 +1887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce21abcc",
+   "id": "445ce475",
    "metadata": {},
    "source": [
     "***\n",
@@ -1899,7 +1900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c50425a9",
+   "id": "877341cb",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1920,7 +1921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f5c4bac",
+   "id": "13f60d56",
    "metadata": {},
    "source": [
     "***\n",
@@ -1933,7 +1934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45fd83ee",
+   "id": "d6f6703a",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1947,7 +1948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbf2eb13",
+   "id": "26819682",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1966,7 +1967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e382f141",
+   "id": "5ac2769c",
    "metadata": {},
    "source": [
     "***\n",
@@ -1979,7 +1980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eadd9141",
+   "id": "34f7c9f4",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2003,7 +2004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1496955f",
+   "id": "f68aaf50",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2018,7 +2019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9cb1595",
+   "id": "d5a0f822",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2031,7 +2032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac5a37d",
+   "id": "bfe3c1aa",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2046,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dff1a24e",
+   "id": "c732956c",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2060,7 +2061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9d6c9ad",
+   "id": "6a1578c7",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2075,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88457361",
+   "id": "1d8d52d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2085,7 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f1bf516",
+   "id": "36605e54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2095,7 +2096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9125bc2d",
+   "id": "c20fb54f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2105,7 +2106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e33ced2c",
+   "id": "969c7727",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2147,7 +2148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5c54ee9",
+   "id": "dd0b3a4c",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2193,7 +2194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "714854c2",
+   "id": "1ed65a25",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2239,7 +2240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e039877",
+   "id": "e4371c84",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2285,7 +2286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebffacc8",
+   "id": "dd59a9c7",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2297,7 +2298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d673ce",
+   "id": "9834906b",
    "metadata": {},
    "source": [
     "Last update: February 29, 2024"
