Updating PHYS-121-Lab-5

--- a/PHYS 121 - Lab 5.ipynb
+++ b/PHYS 121 - Lab 5.ipynb
@@ -603,21 +603,21 @@
     "\n",
     "\\begin{align}\n",
     "\\log(R_2) - \\log(R_1) = 0.2\n",
-    "\\label{eq:difference} \\tag{1}\n",
+    "\\tag{1}\n",
     "\\end{align}\n",
     "\n",
     "where $R_2$ and $R_1$ correspond to the resistance values at any two neighbouring tick marks along the vertical axis.  For this argument, we assume that $R_2 > R_1$.  For example, $\\log(R_1)$ and $\\log(R_2)$ could correspond to $0.4$ and $0.6$, respectively.  Because $\\log A - \\log B = \\log(A/B)$, Eq. (1) can be re-expressed as:\n",
     "\n",
     "\\begin{align}\n",
     "\\log\\left(\\frac{R_2}{R_1}\\right) = 0.2\n",
-    "\\label{eq:log} \\tag{2}\n",
+    "\\tag{2}\n",
     "\\end{align}\n",
     "\n",
     "Solving Eq. (2) for $R_2/R_1$ yields:\n",
     "\n",
     "\\begin{align}\n",
     "\\frac{R_2}{R_1} = 10^{0.2} = 1.585\n",
-    "\\label{eq:ratio} \\tag{3}\n",
+    "\\tag{3}\n",
     "\\end{align}\n",
     "\n",
     "Thus, in Fig. 3, each tick along the vertical axes corresponds to a change in resistance by a factor of $1.585$.  Advancing by $N$ tick marks corresponds to a change in resistance by a factor of $(1.585)^N$."
@@ -1286,7 +1286,7 @@
     "CH1 = ...\n",
     "dCH1 = ...\n",
     "print(f\"Results for tube with diameter {tube1_diameter} mm:\")\n",
-    "print(f\"CH2 = ({CH1:.3g} +/- {dCH1:.3g}) m^4s^2/kg\")"
+    "print(f\"CH1 = ({CH1:.3g} +/- {dCH1:.3g}) m^4s^2/kg\")"
    ]
   },
   {
