Updating PHYS-121-Lab-5

--- a/PHYS 121 - Lab 5.ipynb
+++ b/PHYS 121 - Lab 5.ipynb
@@ -386,6 +386,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc4635d7",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
+    "<!-- END QUESTION -->\n",
+    "\n",
+    "As you can see, there are many repeated measurements of $R_\\mathrm{H}$ for each diameter.  Here are also additional data for small-diameter tubes ($d = 0.305$ and $0.559\\rm\\ mm$) collected by Physics lab staff.  The code cell below calls a function that finds the mean and standard error of $R_\\mathrm{H}$ for each tube diameter.  We'll use this averaged data to analyze how $R_\\mathrm{H}$ varies with $1/d$.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dc00054",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avgData = PHYS121.average(Lab4Data)\n",
+    "avgData # display the averaged data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f033a94d-d69d-4c9e-a057-fa4fdb145c98",
    "metadata": {
     "deletable": false,
@@ -393,8 +417,6 @@
     "tags": []
    },
    "source": [
-    "<!-- END QUESTION -->\n",
-    "\n",
     "<!-- BEGIN QUESTION -->\n",
     "\n",
     "***\n",
@@ -406,7 +428,7 @@
     "```python\n",
     "df[\"Column Name\"] \n",
     "```\n",
-    "where 'df' is the name of the DataFrame in question. For additional information about the 'Scatter()' function, see **Appendix A** near the end of this notebook.   \n",
+    "where 'df' is the name of the DataFrame in question.  Use the averaged data. For additional information about the 'Scatter()' function, see **Appendix A** near the end of this notebook.   \n",
     " \n",
     " *** Please do not change any of the variable names in the cell below ***"
    ]
@@ -470,7 +492,7 @@
    },
    "outputs": [],
    "source": [
-    "PHYS121.PowerLaw(xData = ..., \n",
+    "Coeff, Power, Offset, errCoeff, errPower, errOffset, fig = PHYS121.PowerLaw(xData = ..., \n",
     "                yData = ..., \n",
     "                yErrors = ..., \n",
     "                xlabel = \"1/d\", \n",
@@ -814,7 +836,7 @@
    "source": [
     "PHYS121.Scatter(xData = ..., \n",
     "                yData = ..., \n",
-    "                yErrors = Lab4Data[\"RH_uncertainty\"]/(Lab4Data[\"RH\"]*np.log(10)), \n",
+    "                yErrors = avgData[\"RH_uncertainty\"]/(avgData[\"RH\"]*np.log(10)), \n",
     "                xlabel = \"log(1/d)\", \n",
     "                ylabel = \"log(R_H)\"\n",
     "                );"
@@ -877,9 +899,9 @@
    },
    "outputs": [],
    "source": [
-    "PHYS121.LinearFit(xData = ..., \n",
+    "m, b, dm, db, fig = PHYS121.LinearFit(xData = ..., \n",
     "                yData = ..., \n",
-    "                yErrors = Lab4Data[\"RH_uncertainty\"]/(Lab4Data[\"RH\"]*np.log(10)), \n",
+    "                yErrors = avgData[\"RH_uncertainty\"]/(avgData[\"RH\"]*np.log(10)), \n",
     "                xlabel = \"log(1/d)\", \n",
     "                ylabel = \"log(R_H)\"\n",
     "                );"
@@ -1205,7 +1227,7 @@
    },
    "outputs": [],
    "source": [
-    "PHYS121.Charging( xData = ...,\n",
+    "A, tau, dA, dtau, fig = PHYS121.Charging( xData = ...,\n",
     "                yData = ..., \n",
     "                xlabel = \"Time\", \n",
     "                xUnits = \"s\", \n",
@@ -1499,7 +1521,7 @@
    },
    "outputs": [],
    "source": [
-    "PHYS121.Charging( xData = ...,\n",
+    "A, tau, dA, dtau, fig = PHYS121.Charging( xData = ...,\n",
     "                yData = ..., \n",
     "                xlabel = \"Time\", \n",
     "                xUnits = \"s\", \n",
@@ -1824,7 +1846,7 @@
     "\\tag{14}\n",
     "$$\n",
     "\n",
-    "which is twice the energy stored by the capacitor!"
+    "which is twice the energy stored by the capacitor!  This result does *not* depend on the value of the resistance.  We get the same outcome regardless of the diameter of the hydraulic resistor. "
    ]
   },
   {
@@ -1844,7 +1866,7 @@
     "The analysis above reveals that charging the hydraulic capacitor causes the hydraulic battery to loss twice as much energy ($mg\\Delta h$) as the hydraulic capacitor gains ($mg\\Delta h/2$).  \n",
     "\n",
     " - What is the resolution of this apparent discrepancy?  \n",
-    " - Why does the battery loss twice the energy that the capacitor gains?  \n",
+    " - Why does the battery lose twice the energy that the capacitor gains?  \n",
     " - Where has the other half of the energy gone?\n",
     " \n",
     "Discuss some possible explanations with your partner and perhaps some of the neighbouring groups.  Enter your thoughts and ideas into the cell below. "
@@ -2436,7 +2458,7 @@
    "id": "38172bec",
    "metadata": {},
    "source": [
-    "Last update: February 1, 2026"
+    "Last update: February 28, 2026"
    ]
   }
  ],
